chore: Remove Vercel configuration and Express API files
This commit removes the Vercel configuration file (vercel.json) and the Express API file (api/index.js) from the repository. These files are no longer needed as we are making changes to the project structure.

The Vercel configuration file is deleted because we are no longer using Vercel for deployment. The Express API file is deleted because we have decided to use a different approach for handling API requests.

Additionally, the package.json file is updated to include the "start" script, which will run the index.js file when the project is started. The "socket.io" dependency is also added to the package.json file.

This commit is part of a series of changes to refactor the project and improve its functionality.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A maze game that uses a gyroscope to win.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   }
 }
